--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: LeionWeb Blog
+title: Leion's Blog
 subtitle: '个人技术博客'
 description: '分享技术心得与生活感悟'
 keywords: 技术,博客,前端,后端
-author: Leion
+author: Leion Charrrrls
 language: zh-CN
 timezone: ''
 
