--- a/blog/source/_data/link.yml
+++ b/blog/source/_data/link.yml
@@ -1,18 +1,22 @@
-- class_name: 我の良师
-  class_desc: 当你的天空突然下起了大雨，那是我在为你炸乌云
-  link_list:
-    - name: GitHub
-      link: https://github.com/
-      avatar: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
-      descr: 全球最大的代码托管平台
-    - name: Hexo
-      link: https://hexo.io/
-      avatar: https://hexo.io/icon/favicon-196x196.png
-      descr: 快速、简洁且高效的博客框架
+# - class_name: 配置网
+#   class_desc: 当你的天空突然下起了大雨，那是我在为你炸乌云
+#   link_list:
+#     - name: GitHub
+#       link: https://github.com/
+#       avatar: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+#       descr: 全球最大的代码托管平台
+#     - name: Hexo
+#       link: https://hexo.io/
+#       avatar: https://hexo.io/icon/favicon-196x196.png
+#       descr: 快速、简洁且高效的博客框架
 
-- class_name: 我の益友
+- class_name: 我的友链
   class_desc: 当你的发丝微乱有阵风吹过，那是我在远处想念你
   link_list:
+    - name: Corn 的自留地
+      link: https://blog.hicky.top
+      avatar: https://blog.hicky.top/img/avatar_hu_b92dc5e3da04b55a.png
+      descr: 分享学习过程感悟。 Rust Python
     - name: Butterfly
       link: https://butterfly.js.org/
       avatar: https://butterfly.js.org/img/avatar.png
@@ -22,10 +26,10 @@
       avatar: https://www.jsdelivr.com/img/logo-horizontal.svg
       descr: 免费的开源 CDN 服务
 
-- class_name: 我の友链
+- class_name: 本站
   class_desc: 如果你迷恋岁月舍不得向前，我就默默记录这诗篇<br>如果你厌倦引力想要去飞行，我就让全世界的风吹向你
   link_list:
     - name: Leion's Blog
-      link: https://blog.hicky.top:8443/
+      link: https://leion.ssatop.top
       avatar: /img/avater.jpg
       descr: 这只是一个小破站而已！
