--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 url: https://leion.ssatop.top
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:slug/
 permalink_defaults:
 pretty_urls:
   trailing_index: true
