--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -15,6 +15,7 @@ timezone: ''
 url: https://leion.ssatop.top
 permalink: :year/:month/:day/:slug/
 permalink_defaults:
+# 博客链接优化 - 使用slug替代中文标题
 pretty_urls:
   trailing_index: true
   trailing_html: true
