--- a/blog/package.json
+++ b/blog/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "chmod +x build-bilingual.sh && ./build-bilingual.sh",
+    "build:single": "hexo generate",
+    "build:bilingual": "chmod +x build-bilingual.sh && ./build-bilingual.sh",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
@@ -14,14 +16,19 @@
   },
   "dependencies": {
     "hexo": "^7.3.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-algolia": "^1.3.2",
     "hexo-algoliasearch": "^2.0.0",
     "hexo-blog-encrypt": "^3.1.9",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-filter-nofollow": "^2.0.2",
     "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^2.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-search": "^2.4.3",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^7.0.0",
