--- a/blog/_config.butterfly.yml
+++ b/blog/_config.butterfly.yml
@@ -489,7 +489,7 @@ busuanzi:
 math:
   # 选择: mathjax, katex
   # 如果不需要数学公式，请留空
-  use:
+  use: katex
   per_page: true
   hide_scrollbar: false
 
@@ -501,7 +501,7 @@ math:
 
   katex:
     # 启用复制KaTeX公式
-    copy_tex: false
+    copy_tex: true
 
 # --------------------------------------
 # 搜索
